--- a/public/css/app.css
+++ b/public/css/app.css
@@ -27,6 +27,7 @@
     align-items: center;
     vertical-align: baseline;
     border: 1px solid white;
+    border-radius: 1rem;
     width: 8rem;
     height: 8rem;
     color:white; 
@@ -39,11 +40,26 @@
 }
 
 .footer{
-    margin-top: auto;
-    /*min-height: 50px;*/
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color: white;
+    text-align: center;
+    clear: both;
 }
 
 .svg-container {
     padding: 0.5rem;
     width: 80px;
+}
+
+@media screen and (max-width: 992px) and (min-width:576px){
+    .side{
+        max-height: 30vh;
+    }
+    .content{
+        min-height: 70vh;
+    }
+
 }
