--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,62 @@
+@media screen and (max-width: 576px) {
+  header {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+  }
+
+  header .bars {
+    border: 1px solid green;
+  }
+
+  nav {
+    display: none;
+  }
+
+  main {
+    position: relative;
+    height: 85vh;
+  }
+
+  main .content {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 992px) and (min-width: 576px) {
+  header .bars {
+    display: none;
+  }
+
+  nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #1a1a1a;
+    padding: 1rem;
+    border: 1px solid grey;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  header .bars {
+    display: none;
+  }
+
+  nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #1a1a1a;
+    padding: 1rem;
+    border: 1px solid grey;
+  }
+}
+
 body {
   background-color: black;
   color: white;
@@ -7,8 +66,7 @@ body {
 header {
   display: flex;
   justify-content: space-between;
-  border: 1px solid red;
-  padding: 0.5rem;
+  padding: 1rem;
 }
 
 header .logo-text {
@@ -34,7 +92,7 @@ header .profile img {
   display: flex;
   flex-flow: row wrap;
   align-items: baseline;
-  justify-content: center;
+  justify-content: space-evenly;
   padding: 0.5rem;
 }
 
@@ -46,15 +104,25 @@ header .profile img {
   border-radius: 1rem;
   color: white;
   margin: 0.25rem;
-  width: 30%;
-  height: 30%;
+  width: 26%;
+  height: 26%;
+  padding: 0.5rem;
+}
+
+.menu .menu-tile:hover {
+  background-color: white;
+  cursor: pointer;
+  color: black;
+  -webkit-animation-name: hover;
+          animation-name: hover;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
 }
 
 .menu .menu-tile span {
   text-align: center;
   font-size: 14px;
   font-weight: bold;
-  padding: 0.5rem;
 }
 
 .svg-container {
@@ -63,13 +131,12 @@ header .profile img {
   height: 0;
   padding-bottom: 100%;
   text-align: center;
-  border: 1px solid orange;
 }
 
 .svg-container svg {
   position: absolute;
-  height: 100%;
-  width: 100%;
+  height: 80%;
+  width: 80%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -84,13 +151,42 @@ header .profile img {
   text-align: center;
   clear: both;
   border: 1px solid red;
+  z-index: 1;
 }
 
 .content {
-  background-color: #262626;
+  background-color: #1a1a1a;
+}
+
+.content__container {
+  padding: 1rem;
 }
 
 .flex-container {
   border: 1px solid green;
+}
+
+@-webkit-keyframes hover {
+  from {
+    background-color: transparent;
+  }
+
+  to {
+    background-color: white;
+    color: black;
+    opacity: 1;
+  }
+}
+
+@keyframes hover {
+  from {
+    background-color: transparent;
+  }
+
+  to {
+    background-color: white;
+    color: black;
+    opacity: 1;
+  }
 }
 
