--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,9 @@
 $dark: hsl(0, 0%, 0%);
-$darkgrey: hsl(0,0%,15%);
+$darkgrey: hsl(0,0%,10%);
+
+@import 'app_small';
+@import 'app_medium';
+@import 'app_large';
 
 body{
     background-color: $dark;
@@ -11,8 +15,7 @@ body{
 header{
     display: flex;
     justify-content: space-between;
-    border: 1px solid red;
-    padding: 0.5rem;
+    padding: 1rem;
 
     .logo-text{
         font-family: 'Kufam', cursive;
@@ -38,7 +41,7 @@ header{
     display: flex;
     flex-flow: row wrap;
     align-items: baseline;
-    justify-content: center;
+    justify-content: space-evenly;
     padding: 0.5rem;
 
     .menu-tile{
@@ -49,14 +52,22 @@ header{
         border-radius: 1rem;
         color:white;
         margin: 0.25rem;
-        width: 30%;
-        height: 30%;
+        width: 26%;
+        height: 26%;
+        padding: 0.5rem;
+
+        &:hover{
+            background-color: white;
+            cursor: pointer;
+            color: black;
+            animation-name: hover;
+            animation-duration: 1s;
+        }
     
         span{
             text-align: center;
             font-size: 14px;
             font-weight: bold;
-            padding: 0.5rem;
         }
     }
 }
@@ -66,14 +77,12 @@ header{
     width: 100%;
     height: 0;
     padding-bottom: 100%;
-    // padding: 0.5rem;
     text-align: center;
-    border: 1px solid orange;
     
     svg {
         position: absolute;
-        height: 100%;
-        width: 100%;
+        height: 80%;
+        width: 80%;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
@@ -90,12 +99,29 @@ header{
     text-align: center;
     clear: both;
     border: 1px solid red;
+    z-index: 1;
 }
 
 .content{
     background-color: $darkgrey;
+    
+    &__container{
+        padding: 1rem;
+    }
 }
 
 .flex-container{
     border: 1px solid green;
+}
+
+// general animations
+@keyframes hover {
+    from {
+        background-color: transparent;
+    }
+    to{
+        background-color: white;
+        color: black;
+        opacity: 1;
+    }
 }
