--- a/resources/sass/app_large.scss
+++ b/resources/sass/app_large.scss
@@ -1,4 +1,4 @@
-@media screen and (min-width: 992px){
+@media screen and (min-width: $layout-breakpoint-lg){
     header{
         .bars{
             display: none;
