--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 576px) {
+@media screen and (min-width: 360px) and (max-width: 576px) {
   header {
     display: flex;
     flex-direction: row-reverse;
@@ -6,11 +6,55 @@
   }
 
   header .bars {
-    border: 1px solid green;
+    border: 1px solid white;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+  }
+
+  header .logo-text {
+    color: white;
+    font-size: 18px;
   }
 
   nav {
     display: none;
+  }
+
+  .menu {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: baseline;
+    justify-content: space-evenly;
+    padding: 0.5rem;
+  }
+
+  .menu .menu-tile {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    border: 1px solid grey;
+    border-radius: 1rem;
+    color: white;
+    margin: 0.25rem;
+    width: 26%;
+    height: 26%;
+    padding: 0.5rem;
+  }
+
+  .menu .menu-tile:hover {
+    background-color: white;
+    cursor: pointer;
+    color: black;
+    -webkit-animation-name: hover;
+            animation-name: hover;
+    -webkit-animation-duration: 1s;
+            animation-duration: 1s;
+  }
+
+  .menu .menu-tile span {
+    text-align: center;
+    font-size: 14px;
+    font-weight: bold;
   }
 
   main {
@@ -22,14 +66,17 @@
     position: absolute;
     left: 0;
     top: 0;
-    height: 100%;
     width: 100%;
   }
 }
 
-@media screen and (max-width: 992px) and (min-width: 576px) {
+@media screen and (min-width: 576px) {
   header .bars {
     display: none;
+  }
+
+  header .logo-text {
+    font-size: 36px;
   }
 
   nav {
@@ -39,6 +86,108 @@
     background-color: #1a1a1a;
     padding: 1rem;
     border: 1px solid grey;
+    height: 5vh;
+  }
+
+  nav #menu-toggle {
+    border: 1px solid white;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+  }
+
+  nav #menu-toggle:hover {
+    background-color: white;
+    cursor: pointer;
+    color: black;
+    -webkit-animation-name: hover;
+            animation-name: hover;
+    -webkit-animation-duration: 1s;
+            animation-duration: 1s;
+  }
+
+  nav ul {
+    display: inline-block;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+  }
+
+  nav ul li {
+    float: left;
+    border: 1px solid white;
+    border-radius: 0.5rem;
+    margin-right: 1rem;
+  }
+
+  nav ul li a {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    font-size: 1.25rem;
+    padding: 16px 20px;
+    text-decoration: none;
+  }
+
+  nav ul li a:hover {
+    background-color: white;
+    cursor: pointer;
+    color: black;
+    -webkit-animation-name: hover;
+            animation-name: hover;
+    -webkit-animation-duration: 1s;
+            animation-duration: 1s;
+  }
+
+  main {
+    position: relative;
+    height: 80vh;
+  }
+
+  .menu {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-flow: row wrap;
+    align-items: baseline;
+    justify-content: left;
+    padding: 0.5rem;
+    border: 1px solid grey;
+    background-color: #1a1a1a;
+  }
+
+  .menu .menu-tile {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    border: 1px solid grey;
+    border-radius: 1rem;
+    color: white;
+    margin: 0.25rem;
+    width: 16.25%;
+    height: 26%;
+    padding: 0.5rem;
+  }
+
+  .menu .menu-tile:hover {
+    background-color: white;
+    cursor: pointer;
+    color: black;
+    -webkit-animation-name: hover;
+            animation-name: hover;
+    -webkit-animation-duration: 1s;
+            animation-duration: 1s;
+  }
+
+  .menu .menu-tile span {
+    text-align: center;
+    font-size: 14px;
+    font-weight: bold;
+  }
+
+  .hide {
+    display: none;
   }
 }
 
@@ -67,17 +216,13 @@ header {
   display: flex;
   justify-content: space-between;
   padding: 1rem;
-}
-
-header .logo-text {
-  font-family: "Kufam", cursive;
-  color: white;
-  font-size: 18px;
+  height: 10vh;
+  align-items: center;
 }
 
 header .profile {
   width: auto;
-  height: 65px;
+  height: 80px;
   border: 2px solid grey;
   border-radius: 25%;
   overflow: hidden;
@@ -85,44 +230,7 @@ header .profile {
 
 header .profile img {
   width: auto;
-  height: 65px;
-}
-
-.menu {
-  display: flex;
-  flex-flow: row wrap;
-  align-items: baseline;
-  justify-content: space-evenly;
-  padding: 0.5rem;
-}
-
-.menu .menu-tile {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  border: 1px solid grey;
-  border-radius: 1rem;
-  color: white;
-  margin: 0.25rem;
-  width: 26%;
-  height: 26%;
-  padding: 0.5rem;
-}
-
-.menu .menu-tile:hover {
-  background-color: white;
-  cursor: pointer;
-  color: black;
-  -webkit-animation-name: hover;
-          animation-name: hover;
-  -webkit-animation-duration: 1s;
-          animation-duration: 1s;
-}
-
-.menu .menu-tile span {
-  text-align: center;
-  font-size: 14px;
-  font-weight: bold;
+  height: 80px;
 }
 
 .svg-container {
@@ -143,19 +251,29 @@ header .profile img {
 }
 
 .footer {
-  position: fixed;
+  position: relative;
   left: 0;
   bottom: 0;
   width: 100%;
+  height: 5vh;
   color: white;
   text-align: center;
   clear: both;
-  border: 1px solid red;
-  z-index: 1;
+  background-color: #1a1a1a;
+  border: 1px solid black;
+}
+
+.footer div {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
 }
 
 .content {
   background-color: #1a1a1a;
+  height: 85vh;
 }
 
 .content__container {
