--- a/resources/sass/variables.scss
+++ b/resources/sass/variables.scss
@@ -1,10 +1,12 @@
 $dark: hsl(0, 0%, 0%);
 $darkgrey: hsl(0,0%,10%);
-$footerHeight: 5vh;
-$headerHeight: 10vh;
-$navHeight: 5vh;
+$footerHeight: 2.5vh;
+$headerHeight: 6vh;
+$navHeight: 3vh;
 
 $layout-breakpoint-sm: 360px;
 $layout-breakpoint-md: 576px;
 $layout-breakpoint-lg: 992px;
+
+$lg-menu-width: 20%;
 
