--- a/public/css/app.css
+++ b/public/css/app.css
@@ -85,7 +85,9 @@
     align-items: center;
     background-color: #1a1a1a;
     padding: 1rem;
-    border: 1px solid grey;
+    border: 1px solid #1a1a1a;
+    border-bottom: 1px solid grey;
+    border-top: 1px solid grey;
     height: 3vh;
   }
 
@@ -156,7 +158,7 @@
     align-items: baseline;
     justify-content: left;
     padding: 0.5rem;
-    border: 1px solid grey;
+    border-bottom: 1px solid grey;
     background-color: #1a1a1a;
   }
 
@@ -199,9 +201,9 @@
 }
 
 @media screen and (min-width: 992px) {
-  .flex-container {
-    border: 1px solid purple;
-  }
+  /*.flex-container{
+      border: 1px solid purple;
+  }*/
 
   header .bars {
     display: none;
@@ -211,10 +213,12 @@
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
-    align-items: center;
+    align-items: right;
     background-color: #1a1a1a;
     padding: 1rem;
-    border: 1px solid grey;
+    border: 1px solid #1a1a1a;
+    border-bottom: 1px solid grey;
+    border-top: 1px solid grey;
     height: 3vh;
   }
 
@@ -275,7 +279,8 @@
     justify-content: left;
     align-items: inherit;
     width: 20%;
-    border: 1px solid yellow;
+    border: 1px solid #1a1a1a;
+    border-right: 1px solid grey;
     background-color: #1a1a1a;
     clear: both;
   }
@@ -312,11 +317,11 @@
   main .content {
     position: absolute;
     padding: 1rem;
-    border: 1px solid pink;
     left: 21%;
     right: 0;
     top: 0;
     bottom: 0;
+    border: none;
   }
 }
 
@@ -324,6 +329,7 @@ body {
   background-color: black;
   color: white;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  border: 1px solid grey;
 }
 
 header {
@@ -374,7 +380,7 @@ header .profile img {
   text-align: center;
   clear: both;
   background-color: #1a1a1a;
-  border: 1px solid black;
+  border-top: 1px solid grey;
 }
 
 .footer div {
