--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,7 @@ body{
     background-color: $dark;
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    border: 1px solid grey;
 }
 
 
@@ -59,7 +60,7 @@ header{
     text-align: center;
     clear: both;
     background-color: $darkgrey;
-    border: 1px solid $dark;
+    border-top: 1px solid grey;
 
     div{
         position: absolute;
