--- a/resources/sass/app_large.scss
+++ b/resources/sass/app_large.scss
@@ -1,8 +1,8 @@
 @media screen and (min-width: $layout-breakpoint-lg) {
 
-    .flex-container{
+    /*.flex-container{
         border: 1px solid purple;
-    }
+    }*/
 
     header {
         .bars {
@@ -14,10 +14,12 @@
         display: flex;
         flex-direction: row-reverse;
         justify-content: space-between;
-        align-items: center;
+        align-items: right;
         background-color: $darkgrey;
         padding: 1rem;
-        border: 1px solid grey;
+        border: 1px solid $darkgrey;
+        border-bottom: 1px solid grey;
+        border-top: 1px solid grey;
         height: $navHeight;
 
         #menu-toggle {
@@ -77,7 +79,8 @@
             justify-content: left;
             align-items: inherit;
             width: $lg-menu-width;
-            border: 1px solid yellow;
+            border: 1px solid $darkgrey;
+            border-right: 1px solid grey;
             background-color: $darkgrey;
             clear: both;
 
@@ -112,11 +115,11 @@
         .content {
             position: absolute;
             padding: 1rem;
-            border: 1px solid pink;
             left: $lg-menu-width + 1;
             right: 0;
             top: 0;
             bottom: 0;
+            border: none;
         }
     }
 }
