--- a/resources/sass/app_medium.scss
+++ b/resources/sass/app_medium.scss
@@ -15,7 +15,9 @@
         align-items: center;
         background-color: $darkgrey;
         padding: 1rem;
-        border: 1px solid grey;
+        border: 1px solid $darkgrey;
+        border-bottom: 1px solid grey;
+        border-top: 1px solid grey;
         height: $navHeight;
 
         #menu-toggle {
@@ -81,7 +83,8 @@
             align-items: baseline;
             justify-content: left;
             padding: 0.5rem;
-            border: 1px solid grey;
+            // border: 1px solid grey;
+            border-bottom: 1px solid grey;
             background-color: $darkgrey;
 
             .menu-tile {
