--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,126 @@
-.login-container {
+@media screen and (min-width: 360px) and (max-width: 576px) {
+  .login {
+    padding: 0.5rem;
+  }
+}
+
+@media screen and (min-width: 576px) {
+  .login {
+    padding: 5rem;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .login {
+    padding-left: 15rem;
+    padding-right: 15rem;
+    padding-top: 5rem;
+  }
+
+  .input[type=submit] {
+    background-color: #1a1a1a;
+    color: white;
+    padding: 1rem 1rem;
+    text-decoration: none;
+    border: 1px solid grey;
+    text-align: center;
+    display: inline-block;
+    font-size: 1rem;
+  }
+}
+
+@media screen and (min-width: 1300px) {
+  .login {
+    padding-left: 30rem;
+    padding-right: 30rem;
+    padding-top: 5rem;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .login {
+    padding-left: 35rem;
+    padding-right: 35rem;
+    padding-top: 5rem;
+  }
+}
+
+.form-submit {
+  border: 1px solid orange;
+  position: relative;
+}
+
+.form-submit input[type=submit] {
+  background-color: #1a1a1a;
   color: white;
-  background-color: black;
+  padding: 1rem 1rem;
+  text-decoration: none;
+  border: 1px solid grey;
+  text-align: center;
+  display: inline-block;
+  font-size: 1rem;
+  width: 8rem;
+}
+
+.form-submit a {
+  position: absolute;
+  right: 5%;
+  top: 50%;
+  transform: translate(0, -50%);
+}
+
+.login-container {
+  border: 1px solid grey;
+  width: 100%;
+}
+
+.login-container-header {
+  border: 1px solid grey;
+  padding: 0.5rem;
+  font-size: 1.25rem;
+}
+
+.login-container-form {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.login-container-form p {
+  padding: 0.3rem;
+}
+
+.login-container-form .input-container {
+  position: relative;
+  border-radius: 6px;
+  margin-bottom: 1.5rem;
+}
+
+.login-container-form .input-container i {
+  position: absolute;
+  display: inline-block;
+  padding: 1rem;
+  font-size: 1.25rem;
+  left: 0;
+  top: 0;
+}
+
+.login-container-form .input-container input {
+  font-size: 1.25rem;
+  outline: none;
+  border: 1px solid #b3b3b3;
+  background-color: #1a1a1a;
+  padding: 1rem;
+  border-radius: 6px;
+  color: #b3b3b3;
+  width: 91%;
+  text-indent: 1.5rem;
+}
+
+.login-container-form .input-container input:focus {
+  border: 1px solid white;
 }
 
 @media screen and (min-width: 360px) and (max-width: 576px) {
