--- a/resources/sass/login/login.scss
+++ b/resources/sass/login/login.scss
@@ -1,5 +1,131 @@
-.login-container{
-    color:white;
-    background-color: $dark;
+@media screen and (min-width: $layout-breakpoint-sm) and (max-width: $layout-breakpoint-md) {
+    .login{
+        padding: 0.5rem;
+    }
 }
 
+@media screen and (min-width: $layout-breakpoint-md) {
+    .login{
+        padding: 5rem;
+
+    }
+}
+
+@media screen and (min-width: $layout-breakpoint-lg) {
+    .login{
+        padding-left: 15rem;
+        padding-right: 15rem;
+        padding-top: 5rem;
+    }
+
+    .input[type="submit"]{
+
+        background-color: $darkgrey;
+        color: white;
+        padding: 1rem 1rem;
+        text-decoration: none;
+        border: 1px solid grey;
+        text-align: center;
+        display: inline-block;
+        font-size: 1rem;
+    }
+}
+
+@media screen and (min-width: 1300px){
+    .login{
+        padding-left: 30rem;
+        padding-right: 30rem;
+        padding-top: 5rem;
+    }
+}
+
+@media screen and (min-width: 1600px){
+    .login{
+        padding-left: 35rem;
+        padding-right: 35rem;
+        padding-top: 5rem;
+    }
+}
+
+
+// general
+
+.form-submit{
+    border: 1px solid orange;
+    position: relative;
+
+    input[type="submit"]{
+
+        background-color: $darkgrey;
+        color: white;
+        padding: 1rem 1rem;
+        text-decoration: none;
+        border: 1px solid grey;
+        text-align: center;
+        display: inline-block;
+        font-size: 1rem;
+        width: 8rem;
+    }
+
+    a{
+        position: absolute;
+        right: 5%;
+        top: 50%;
+        transform: translate(0,-50%);
+    }
+}
+
+.login-container{
+    border: 1px solid grey;
+    width: 100%;
+
+    &-header{
+        border: 1px solid grey;
+        padding: 0.5rem;
+        font-size: 1.25rem;
+    }
+
+    &-form{
+        display: flex;
+        flex-direction: column;
+        padding: 1rem;
+        justify-content: space-between;
+        height: 100%;
+
+        p{
+            padding: 0.3rem;
+        }
+
+        .input-container {
+            position: relative;
+            // border: 1px solid hsl(0, 0%, 40%);
+            border-radius: 6px;
+            margin-bottom: 1.5rem;
+
+            i{
+                position: absolute;
+                display: inline-block;
+                padding: 1rem;
+                font-size: 1.25rem;
+                left: 0;
+                top: 0;
+            }
+
+            input {
+                font-size: 1.25rem;
+                outline: none;
+                border: 1px solid hsl(0, 0%, 70%);;
+                background-color: $darkgrey;
+                padding: 1rem;
+                border-radius: 6px;
+                color: hsl(0, 0%, 70%);
+                width: 91%;
+                text-indent: 1.5rem;
+
+                &:focus{
+                    border: 1px solid white;
+                }
+            }
+        }
+    }
+}
