--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,12 +1,30 @@
 @media screen and (min-width: 360px) and (max-width: 576px) {
   .login {
     padding: 0.5rem;
+    text-align: center;
+  }
+
+  .form-submit {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
   }
 }
 
 @media screen and (min-width: 576px) {
   .login {
     padding: 5rem;
+    text-align: center;
+  }
+
+  .form-submit {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
   }
 }
 
@@ -15,17 +33,6 @@
     padding-left: 15rem;
     padding-right: 15rem;
     padding-top: 5rem;
-  }
-
-  .input[type=submit] {
-    background-color: #1a1a1a;
-    color: white;
-    padding: 1rem 1rem;
-    text-decoration: none;
-    border: 1px solid grey;
-    text-align: center;
-    display: inline-block;
-    font-size: 1rem;
   }
 }
 
@@ -45,57 +52,60 @@
   }
 }
 
-.form-submit {
-  border: 1px solid orange;
-  position: relative;
-}
-
 .form-submit input[type=submit] {
   background-color: #1a1a1a;
   color: white;
-  padding: 1rem 1rem;
+  padding: 1rem 1.5rem;
   text-decoration: none;
   border: 1px solid grey;
   text-align: center;
   display: inline-block;
-  font-size: 1rem;
-  width: 8rem;
+  font-size: 1.13rem;
+  width: 10rem;
+  border-radius: 6px;
 }
 
 .form-submit a {
-  position: absolute;
+  /*position: absolute;
   right: 5%;
   top: 50%;
-  transform: translate(0, -50%);
+  transform: translate(0,-50%);*/
+  margin-top: 0.5rem;
+  color: white;
+  cursor: pointer;
+  font-size: 1.13rem;
 }
 
 .login-container {
   border: 1px solid grey;
+  border-radius: 1.5rem;
   width: 100%;
+  overflow: hidden;
 }
 
 .login-container-header {
-  border: 1px solid grey;
-  padding: 0.5rem;
+  display: flex;
+  background-color: #0d0d0d;
+  justify-content: space-between;
+  padding: 1rem 1.5rem;
   font-size: 1.25rem;
 }
 
 .login-container-form {
   display: flex;
   flex-direction: column;
+  background-color: #1a1a1a;
+  border-top: 1px solid grey;
   padding: 1rem;
+  padding-top: 1.5rem;
   justify-content: space-between;
   height: 100%;
-}
-
-.login-container-form p {
-  padding: 0.3rem;
 }
 
 .login-container-form .input-container {
   position: relative;
   border-radius: 6px;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.75rem;
 }
 
 .login-container-form .input-container i {
@@ -103,7 +113,7 @@
   display: inline-block;
   padding: 1rem;
   font-size: 1.25rem;
-  left: 0;
+  left: 0.5rem;
   top: 0;
 }
 
@@ -116,7 +126,7 @@
   border-radius: 6px;
   color: #b3b3b3;
   width: 91%;
-  text-indent: 1.5rem;
+  text-indent: 2rem;
 }
 
 .login-container-form .input-container input:focus {
