--- a/resources/sass/login/login.scss
+++ b/resources/sass/login/login.scss
@@ -1,13 +1,34 @@
 @media screen and (min-width: $layout-breakpoint-sm) and (max-width: $layout-breakpoint-md) {
     .login{
         padding: 0.5rem;
+        text-align: center;
+    }
+
+    .form-submit {
+        // border: 1px solid orange;
+        // position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1rem;
     }
 }
 
 @media screen and (min-width: $layout-breakpoint-md) {
     .login{
         padding: 5rem;
+        text-align: center;
+    }
 
+    .form-submit{
+        // border: 1px solid orange;
+        // position: relative;
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1rem;
     }
 }
 
@@ -16,18 +37,6 @@
         padding-left: 15rem;
         padding-right: 15rem;
         padding-top: 5rem;
-    }
-
-    .input[type="submit"]{
-
-        background-color: $darkgrey;
-        color: white;
-        padding: 1rem 1rem;
-        text-decoration: none;
-        border: 1px solid grey;
-        text-align: center;
-        display: inline-block;
-        font-size: 1rem;
     }
 }
 
@@ -51,63 +60,72 @@
 // general
 
 .form-submit{
-    border: 1px solid orange;
-    position: relative;
+
+    // border: 1px solid grey;
+
 
     input[type="submit"]{
 
         background-color: $darkgrey;
         color: white;
-        padding: 1rem 1rem;
+        padding: 1rem 1.5rem;
         text-decoration: none;
         border: 1px solid grey;
         text-align: center;
         display: inline-block;
-        font-size: 1rem;
-        width: 8rem;
+        font-size: 1.13rem;
+        width: 10rem;
+        border-radius: 6px;
     }
 
     a{
-        position: absolute;
+        /*position: absolute;
         right: 5%;
         top: 50%;
-        transform: translate(0,-50%);
+        transform: translate(0,-50%);*/
+        margin-top: 0.5rem;
+        color:white;
+        cursor: pointer;
+        font-size: 1.13rem;
     }
 }
 
 .login-container{
     border: 1px solid grey;
+    border-radius: 1.5rem;
     width: 100%;
+    overflow: hidden;
 
     &-header{
-        border: 1px solid grey;
-        padding: 0.5rem;
+        display: flex;
+        background-color: $darkxgrey;
+        justify-content: space-between;
+        padding: 1rem 1.5rem;
         font-size: 1.25rem;
     }
 
     &-form{
         display: flex;
         flex-direction: column;
+        background-color: $darkgrey;
+        border-top: 1px solid grey;
         padding: 1rem;
+        padding-top: 1.5rem;
         justify-content: space-between;
         height: 100%;
-
-        p{
-            padding: 0.3rem;
-        }
 
         .input-container {
             position: relative;
             // border: 1px solid hsl(0, 0%, 40%);
             border-radius: 6px;
-            margin-bottom: 1.5rem;
+            margin-bottom: 1.75rem;
 
             i{
                 position: absolute;
                 display: inline-block;
                 padding: 1rem;
                 font-size: 1.25rem;
-                left: 0;
+                left: 0.5rem;
                 top: 0;
             }
 
@@ -120,7 +138,7 @@
                 border-radius: 6px;
                 color: hsl(0, 0%, 70%);
                 width: 91%;
-                text-indent: 1.5rem;
+                text-indent: 2rem;
 
                 &:focus{
                     border: 1px solid white;
