--- a/resources/sass/login/login.scss
+++ b/resources/sass/login/login.scss
@@ -1,5 +1,5 @@
 @media screen and (min-width: $layout-breakpoint-sm) and (max-width: $layout-breakpoint-md) {
-    .login{
+    .login {
         padding: 0.5rem;
         text-align: center;
     }
@@ -16,12 +16,12 @@
 }
 
 @media screen and (min-width: $layout-breakpoint-md) {
-    .login{
+    .login {
         padding: 5rem;
         text-align: center;
     }
 
-    .form-submit{
+    .form-submit {
         // border: 1px solid orange;
         // position: relative;
         display: flex;
@@ -33,39 +33,41 @@
 }
 
 @media screen and (min-width: $layout-breakpoint-lg) {
-    .login{
+    .login {
         padding-left: 15rem;
         padding-right: 15rem;
         padding-top: 5rem;
     }
 }
 
-@media screen and (min-width: 1300px){
-    .login{
+@media screen and (min-width: 1300px) {
+    .login {
         padding-left: 30rem;
         padding-right: 30rem;
         padding-top: 5rem;
     }
 }
 
-@media screen and (min-width: 1600px){
-    .login{
+@media screen and (min-width: 1600px) {
+    .login {
         padding-left: 35rem;
         padding-right: 35rem;
         padding-top: 5rem;
     }
-}
 
+    .login-container-accommodations-list {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+    }
+}
 
 // general
 
-.form-submit{
-
+.form-submit {
     // border: 1px solid grey;
 
-
-    input[type="submit"]{
-
+    input[type="submit"] {
         background-color: $darkgrey;
         color: white;
         padding: 1rem 1.5rem;
@@ -78,25 +80,25 @@
         border-radius: 6px;
     }
 
-    a{
+    a {
         /*position: absolute;
         right: 5%;
         top: 50%;
         transform: translate(0,-50%);*/
         margin-top: 0.5rem;
-        color:white;
+        color: white;
         cursor: pointer;
         font-size: 1.13rem;
     }
 }
 
-.login-container{
+.login-container {
     border: 1px solid grey;
     border-radius: 1.5rem;
     width: 100%;
     overflow: hidden;
 
-    &-header{
+    &-header {
         display: flex;
         background-color: $darkxgrey;
         justify-content: space-between;
@@ -104,7 +106,7 @@
         font-size: 1.25rem;
     }
 
-    &-form{
+    &-form {
         display: flex;
         flex-direction: column;
         background-color: $darkgrey;
@@ -120,7 +122,7 @@
             border-radius: 6px;
             margin-bottom: 1.75rem;
 
-            i{
+            i {
                 position: absolute;
                 display: inline-block;
                 padding: 1rem;
@@ -132,7 +134,7 @@
             input {
                 font-size: 1.25rem;
                 outline: none;
-                border: 1px solid hsl(0, 0%, 70%);;
+                border: 1px solid hsl(0, 0%, 70%);
                 background-color: $darkgrey;
                 padding: 1rem;
                 border-radius: 6px;
@@ -140,9 +142,60 @@
                 width: 91%;
                 text-indent: 2rem;
 
-                &:focus{
+                &:focus {
                     border: 1px solid white;
                 }
+            }
+        }
+    }
+
+    &-accommodations {
+        border-top: 1px solid grey;
+        font-size: 1.125rem;
+
+        &-list {
+            a {
+                display: block;
+                margin: 2rem;
+                padding: 1.25rem;
+                border: 1px solid grey;
+                border-radius: 1rem;
+                color: white;
+                text-decoration: none;
+                text-align: center;
+                font-size: 1.25rem;
+
+                &:hover {
+                    background-color: white;
+                    cursor: pointer;
+                    color: black;
+                    animation-name: hover;
+                    animation-duration: 1s;
+                }
+            }
+        }
+
+        .welcome-message {
+            margin: 2rem;
+            font-size: 1.25rem;
+
+            &-roles {
+                list-style: none;
+
+                &-role {
+                    color: green;
+                }
+            }
+        }
+
+        .select-message {
+            margin: 2rem;
+            font-size: 1.25rem;
+        }
+
+        .admin-message{
+            a{
+                color: white;
             }
         }
     }
