--- a/resources/sass/login/login.scss
+++ b/resources/sass/login/login.scss
@@ -131,7 +131,7 @@
                 top: 0;
             }
 
-            input {
+            input, select {
                 font-size: 1.25rem;
                 outline: none;
                 border: 1px solid hsl(0, 0%, 70%);
@@ -145,57 +145,6 @@
                 &:focus {
                     border: 1px solid white;
                 }
-            }
-        }
-    }
-
-    &-accommodations {
-        border-top: 1px solid grey;
-        font-size: 1.125rem;
-
-        &-list {
-            a {
-                display: block;
-                margin: 2rem;
-                padding: 1.25rem;
-                border: 1px solid grey;
-                border-radius: 1rem;
-                color: white;
-                text-decoration: none;
-                text-align: center;
-                font-size: 1.25rem;
-
-                &:hover {
-                    background-color: white;
-                    cursor: pointer;
-                    color: black;
-                    animation-name: hover;
-                    animation-duration: 1s;
-                }
-            }
-        }
-
-        .welcome-message {
-            margin: 2rem;
-            font-size: 1.25rem;
-
-            &-roles {
-                list-style: none;
-
-                &-role {
-                    color: green;
-                }
-            }
-        }
-
-        .select-message {
-            margin: 2rem;
-            font-size: 1.25rem;
-        }
-
-        .admin-message{
-            a{
-                color: white;
             }
         }
     }
