--- a/resources/sass/dash/dash.scss
+++ b/resources/sass/dash/dash.scss
@@ -24,6 +24,7 @@ header{
     }
 }
 
+
 .svg-container {
     position: relative;
     width: 100%;
@@ -61,5 +62,28 @@ header{
         transform: translate(-50%, -50%);
         width: 100%;
 
+    }
+}
+
+.content{
+
+    table{
+        border: 1px solid grey;
+        border-radius: 1rem;
+        padding: 1.5rem;
+        font-size: 1.25rem;
+
+        tr{
+            td{
+                overflow: wrap;
+                padding: 0.75rem;
+                border: 1px solid grey;
+
+                &:nth-child(even){
+                    text-align: left;
+                    max-width: 400px;
+                }
+            }
+        }
     }
 }
