--- a/resources/sass/login/login.scss
+++ b/resources/sass/login/login.scss
@@ -55,11 +55,6 @@
         padding-top: 5rem;
     }
 
-    .login-container-accommodations-list {
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: center;
-    }
 }
 
 // general
@@ -131,7 +126,7 @@
                 top: 0;
             }
 
-            input, select {
+            input, select{
                 font-size: 1.25rem;
                 outline: none;
                 border: 1px solid hsl(0, 0%, 70%);
@@ -146,6 +141,13 @@
                     border: 1px solid white;
                 }
             }
+
+            select {
+                text-indent: 0;
+
+            }
+
+
         }
     }
 }
