--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,6 +2,7 @@
 @import 'animations';
 @import './login/login';
 @import './dash/dash';
+@import './components/charts/circular.scss';
 
 body{
     background-color: $dark;
@@ -9,3 +10,4 @@ body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     border: 1px solid grey;
 }
+
