--- a/resources/sass/components/charts/circular.scss
+++ b/resources/sass/components/charts/circular.scss
@@ -1,22 +1,26 @@
-.charts-panel{
-    flex-grow: 1;
-    border: 1px solid blue;
-}
 .single-chart {
+    position: relative;
+    border: 1px solid red;
+    width: 225px;
+    height: 225px;
     margin: 1rem;
-    height: 40%;
-    border: 1px solid grey;
-    padding: 1rem;
-    flex-grow: 1;
+
+    &-description{
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        padding: 0.5rem;
+        font-size: 1.25rem;
+        // border: 1px solid yellow;
+        transform: translate(-50%,0);
+    }
 }
 
-/*.circular-chart {
+.circular-chart {
+    position: absolute;
     border: 1px solid blue;
-    display: block;
-    margin: 10px auto;
-    max-width: 80%;
-    max-height: 250px;
-}*/
+    left: 10%;
+}
 
 .circle-bg {
     fill: none;
