--- a/public/css/app.css
+++ b/public/css/app.css
@@ -566,8 +566,8 @@ header .profile img {
 .content table {
   font-size: 1.25rem;
   width: 100%;
-  border: 1px solid pink;
-  padding: 1rem;
+  border-spacing: 0.5rem;
+  border-collapse: seperate;
 }
 
 .content table tr td {
@@ -606,9 +606,10 @@ header .profile img {
   position: absolute;
   bottom: 0;
   left: 50%;
-  padding: 0.5rem;
   font-size: 1.25rem;
+  width: 100%;
   transform: translate(-50%, 0);
+  text-align: center;
 }
 
 .single-chart-status {
@@ -631,7 +632,7 @@ header .profile img {
 
 .circle-bg {
   fill: none;
-  stroke: #eee;
+  stroke: darkgrey;
   stroke-width: 3.8;
 }
 
