--- a/resources/sass/dash/dash_small.scss
+++ b/resources/sass/dash/dash_small.scss
@@ -49,9 +49,13 @@
             }
         
             span{
-                text-align: center;
-                font-size: 14px;
-                font-weight: bold;
+                a{
+                    text-align: center;
+                    font-size: 14px;
+                    font-weight: bold;
+                    text-decoration: none;
+                    color: white;
+                }
             }
         }
     }
