--- a/resources/sass/dash/dash_large.scss
+++ b/resources/sass/dash/dash_large.scss
@@ -105,9 +105,13 @@
                 }
 
                 span {
-                    text-align: center;
-                    font-size: 12x;
-                    font-weight: bold;
+                    a{
+                        text-align: center;
+                        font-size: 14px;
+                        font-weight: bold;
+                        text-decoration: none;
+                        color: white;
+                    }
                 }
             }
         }
