--- a/resources/sass/dash/dash.scss
+++ b/resources/sass/dash/dash.scss
@@ -65,6 +65,14 @@ header{
     }
 }
 
+.taken{
+    background-color:red;
+}
+
+.free{
+    background-color: $darkgrey;
+}
+
 .content{
 
     // table with accommodation information
@@ -72,6 +80,11 @@ header{
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
+
+    .res-record{
+        border: 1px solid white;
+        padding: 1rem;
+    }
 
     table{
         font-size: 1.25rem;
